# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

if (host_os != "linux" || host_cpu != "arm64") {
  ohos_cargo_crate("lib") {
    crate_name = "clap"
    crate_type = "rlib"
    crate_root = "src/lib.rs"

    sources = [ "src/lib.rs" ]
    edition = "2021"
    cargo_pkg_version = "4.1.13"
    cargo_pkg_name = "clap"
    cargo_pkg_description = "A simple to use, efficient, and full-featured Command Line Argument Parser"
    deps = [
      "//third_party/rust/crates/bitflags:lib",
      "//third_party/rust/crates/clap/clap_derive:lib(${host_toolchain})",
      "//third_party/rust/crates/clap/clap_lex:lib",
      "//third_party/rust/crates/is-terminal:lib",
      "//third_party/rust/crates/once_cell:lib",
      "//third_party/rust/crates/strsim-rs:lib",
      "//third_party/rust/crates/termcolor:lib",
    ]
    features = [
      "color",
      "error-context",
      "help",
      "std",
      "suggestions",
      "usage",
      "derive",
    ]
    module_output_extension = ".rlib"
    part_name = "rust_clap"
    subsystem_name = "thirdparty"
  }

  ohos_cargo_crate("stdio_fixture") {
    crate_type = "bin"
    crate_root = "src/bin/stdio-fixture.rs"

    sources = [ "src/bin/stdio-fixture.rs" ]
    edition = "2021"
    cargo_pkg_version = "4.1.13"
    cargo_pkg_name = "clap"
    cargo_pkg_description = "A simple to use, efficient, and full-featured Command Line Argument Parser"
    deps = [
      "//third_party/rust/crates/bitflags:lib",
      "//third_party/rust/crates/clap:lib",
      "//third_party/rust/crates/clap/clap_derive:lib(${host_toolchain})",
      "//third_party/rust/crates/clap/clap_lex:lib",
      "//third_party/rust/crates/is-terminal:lib",
      "//third_party/rust/crates/once_cell:lib",
      "//third_party/rust/crates/strsim-rs:lib",
      "//third_party/rust/crates/termcolor:lib",
    ]
    features = [
      "color",
      "error-context",
      "help",
      "std",
      "suggestions",
      "usage",
      "derive",
    ]
    part_name = "rust_clap"
    subsystem_name = "thirdparty"
  }
}
